# cocos2d

./: .gitignore  .gitmodules
cmake/Modules/: CocosConfigDefine.cmake  CocosSelectModule.cmake
cocos/: Android.mk  CMakeLists.txt
cocos/2d/: CCFastTMXLayer.cpp  CCLabel.cpp  CCLabel.h  CCLabelTextFormatter.cpp  CCProgressTimer.cpp  CCSpriteBatchNode.cpp  cocos2d_headers.props  libcocos2d.vcxproj  libcocos2d.vcxproj.filters
cocos/3d/: CCBillBoard.cpp  CCMesh.cpp  CCMotionStreak3D.cpp
cocos/audio/: AudioEngine.cpp
cocos/audio/android/: Android.mk  AudioEngine-inl.cpp  AudioEngine-inl.h  AudioPlayerProvider.cpp  AudioPlayerProvider.h
cocos/audio/android/cutils/: log.h
cocos/audio/android/jni/: cddandroidAndroidJavaEngine.cpp
cocos/audio/apple/: AudioCache.h  AudioCache.mm  AudioEngine-inl.h  AudioEngine-inl.mm  AudioMacros.h
cocos/audio/include/: AudioEngine.h
cocos/audio/linux/: AudioEngine-linux.cpp  AudioEngine-linux.h
cocos/audio/win32/: AudioCache.cpp  AudioCache.h  AudioEngine-win32.cpp  AudioEngine-win32.h
cocos/audio/winrt/: AudioEngine-winrt.cpp  AudioEngine-winrt.h
cocos/base/: CCConfiguration.cpp  CCConsole.h  CCData.cpp  CCData.h  CCDirector.cpp  CCDirector.h
cocos/editor-support/cocostudio/: Android.mk
cocos/editor-support/dragonbones/: Android.mk  CCArmatureDisplay.cpp  CCArmatureDisplay.h  CCFactory.cpp  CCFactory.h  CCSlot.cpp  CCSlot.h  CCTextureAtlasData.cpp  CCTextureAtlasData.h  CMakeLists.txt
cocos/editor-support/fairygui/: Android.mk  CMakeLists.txt  Controller.h  DragDropManager.h  FairyGUI.h  FairyGUIMacros.h  GButton.h  GComboBox.cpp  GComboBox.h  GComponent.cpp  GComponent.h  GGraph.h  GGroup.h  GImage.cpp  GImage.h  GLabel.cpp  GLabel.h  GList.cpp  GList.h  GLoader.cpp  GLoader.h  GMovieClip.h  GObject.cpp  GObject.h  GObjectPool.h  GProgressBar.cpp  GProgressBar.h  GRichTextField.h  GRoot.cpp  GRoot.h  GScrollBar.h  GSlider.h  GTextField.cpp  GTextField.h  GTextInput.cpp  GTextInput.h  Margin.h  PackageItem.cpp  PackageItem.h  PopupMenu.h  (+15 more)
cocos/editor-support/fairygui/controller_action/: ChangePageAction.cpp  (+5 more)
cocos/editor-support/spine/: SkeletonRenderer.cpp  spine-cocos2dx.h
cocos/network/: Android.mk
cocos/platform/: CCFileUtils.cpp  CCImage.cpp
cocos/platform/apple/: CCFileUtils-apple.h  CCFileUtils-apple.mm
cocos/platform/win32/: CCFileUtils-win32.cpp  CCStdC-win32.h
cocos/renderer/: CCQuadCommand.cpp  CCTexture2D.cpp  CCTexture2D.h  CCTextureAtlas.cpp  CCTextureCache.cpp  CCTextureCache.h  CCTrianglesCommand.cpp
cocos/scripting/lua-bindings/: CMakeLists.txt
cocos/ui/: UIVideoPlayer-ios.mm
extensions/: Android.mk
plugin/: CMakeLists.txt
plugin/luabindings/manual/: lua_pluginx_manual_callback.cpp
plugin/plugins/fy/proj.android/: AndroidManifest.xml  build.gradle  proguard-rules.pro
plugin/plugins/fy/proj.android/res/layout/: fysdk_splash.xml
plugin/plugins/fy/proj.android/src/org/cocos2dx/plugin/: FyIap.java  FyUser.java
plugin/plugins/nd91/proj.android/: ForManifest.xml
plugin/plugins/nd91/proj.android/DependProject/: AndroidManifest.xml
plugin/plugins/qh360/proj.android/: ForManifest.xml
plugin/plugins/uc/proj.android/: ForManifest.xml
plugin/plugins/umeng/proj.android/: ForManifest.xml
plugin/protocols/include/: ProtocolIAP.h  ProtocolSocial.h
plugin/protocols/platform/android/: ProtocolIAP.cpp  ProtocolUser.cpp
plugin/protocols/platform/ios/: IAPWrapper.h  IAPWrapper.mm  InterfaceShare.h  SocialWrapper.h
plugin/protocols/proj.android/: AndroidManifest.xml  build.gradle
plugin/protocols/proj.android/src/org/cocos2dx/plugin/: IAPWrapper.java  InterfaceUser.java  UserWrapper.java
plugin/samples/HelloPlugins/proj.android/: AndroidManifest.xml
templates/: cocos2dx_files.json
tests/fairygui-tests/: .gitignore
tests/fairygui-tests/Classes/: AppDelegate.cpp  BagWindow.h  DemoScene.h  DragonboneScene.cpp  DragonboneScene.h  EmojiParser.h  JoystickModule.h  MenuScene.cpp
tests/fairygui-tests/proj.win32/: Examples.sln  Examples.vcxproj  Examples.vcxproj.filters
tests/lua-fairygui-tests/: .gitignore
tests/lua-fairygui-tests/Classes/: AppDelegate.cpp
tests/lua-fairygui-tests/src/: controller.lua
tools/tolua/: cocos2dx.ini  cocos2dx_3d.ini  cocos2dx_audioengine.ini  cocos2dx_cocosbuilder.ini  cocos2dx_cocosdenshion.ini  cocos2dx_controller.ini  cocos2dx_csloader.ini  cocos2dx_dragonbones.ini  cocos2dx_experimental.ini  cocos2dx_experimental_video.ini  cocos2dx_experimental_webview.ini  cocos2dx_extension.ini  cocos2dx_fairygui.ini  cocos2dx_navmesh.ini  cocos2dx_physics.ini  cocos2dx_physics3d.ini  cocos2dx_spine.ini  cocos2dx_studio.ini  cocos2dx_ui.ini  genbindings.py  userconf.ini
tools/travis-scripts/: config.gitingore
(+666 files in other folders)
